# music

./: .gitignore  README.md  app.py  demo.py  environment.yml  main.py  music.py  notes.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  release.yaml
src/music/: app.py  cli.py  graph.py  music.py
src/music/static/: .gitignore
src/music/templates/: base.html  guitar_chord_progression_display.html  guitar_chord_progression_input.html  guitar_positions_input.html  voice_leading_input.html
static/: .gitignore
templates/: base.html  demo.html  display.html  guitar_positions_input.html  info.html  input.html  voice_leading_display.html
tests/: test_cli.py  test_demo.py  test_graph.py  test_main.py  test_music.py  test_notes.py
