[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music"
dynamic = ["version"]
description = "Helper tools for music"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.3",
    "numpy<2",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
media = [
    "matplotlib>=3.9.2",
]
test = [
    "setuptools",
    "pytest",
    "ruff",
    "ty",
]

[project.scripts]
music-cli = "music.cli:main"
music-app = "music.app:main"

[tool.hatch.version]
path = "src/music/__init__.py"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
