[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music"
dynamic = ["version"]
description = "Helper tools for music"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "flask>=3.0.3",
    "numpy<2",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
media = [
    "matplotlib>=3.9.2",
]
test = [
    "setuptools",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "tox-uv",
    "ty",
]

[project.scripts]
music-cli = "music.cli:main"
music-app = "music.app:main"

[tool.hatch.version]
path = "src/music/__init__.py"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=music"

[tool.coverage.report]
fail_under = 90
omit = [
    "src/music/app.py",
]

[tool.coverage.run]
patch = ["subprocess"]

[tool.tox]
env_list = ["py310"]
isolated_build = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["uv", "run", "pytest"], ["uv", "run", "ruff", "check"], ["uv", "run", "ty", "check"]]
